--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -10,7 +10,7 @@
     <PackageId>Staticsoft.$(MSBuildProjectName)</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Staticsoft/Testing</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Staticsoft/AutomatedTesting</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
