--- a/Testing.Integration.Tests/Testing.Integration.Tests.csproj
+++ b/Testing.Integration.Tests/Testing.Integration.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFrameworks>net60;netcoreapp3.1</TargetFrameworks>
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnitTesting\UnitTesting.csproj" />
+    <ProjectReference Include="..\Testing.Integration\Testing.Integration.csproj" />
+    <ProjectReference Include="..\TestServer\TestServer.csproj" />
   </ItemGroup>
 
 </Project>
