Simplified integration and unit tests

--- a/Testing.Unit/Testing.Unit.csproj
+++ b/Testing.Unit/Testing.Unit.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Testing.Abstractions\Testing.Abstractions.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
